--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       -->
         <div class="b-lang">
 
-          <a href="./index_fr.html">
+          <a href="#">
             <p>Français</p>
           </a>
           <p id="active-page">English</p>
