--- a/index_fr.html
+++ b/index_fr.html
@@ -34,15 +34,11 @@
       -->
         <div class="b-lang">
 
-          <a href="./index_fr.html">
-            <p>Français</p>
-          </a>
-          <p id="active-page">English</p>
+          <p id="active-page">Français</p>
+          <a href="./index.html"><p>English</p></a>
           <a href="#">
             <p id="korean">한국어</p>
           </a>
-
-
         </div>
       </div>
     </div>
@@ -50,19 +46,19 @@
   <div class="back-photo"></div>
   <div id="container">
     <div class="navigator">
-      <h2>Index</h2>
+      <h2>Sommaire</h2>
       <ul>
         <a href="#link-1">
-          <li>Home</li>
+          <li>Accueil</li>
         </a>
         <a href="#link-2">
-          <li>Academic Background</li>
+          <li>Education</li>
         </a>
         <a href="#link-3">
-          <li>Work Experience</li>
+          <li>Expérience Professionel</li>
         </a>
         <a href="#projects-title">
-          <li>Projects</li>
+          <li>Projets</li>
         </a>
       </ul>
     </div>
@@ -70,7 +66,7 @@
 
     <div class="main">
       <div class="content-1">
-        <h1 id="link-1">Presentation</h1>
+        <h1 id="link-1">Présentation</h1>
         <div class="nom-et-photo">
           <p class="nom"><span>SACCHETTI</span> Florian</p>
           <img src="./KakaoTalk_20230718_115041813.jpg">
@@ -78,97 +74,97 @@
 
         <h2><br>Heu.. bonjour.. je m'appelle heu.. Florian, et heu.. voila heu.. si vous me decouvrez ben heu.. merci de
           me decouvrir</h2>
-        <br>
-        <h2>My name is Florian SACCHETTI, I am a 26 years-old French people born in Lyon, France.</h2>
-        <h2>Currently living in Korea, I am looking for a job in the Energy and Enviroment field</h2>
-
+          <br>
+          <h2>Je m'appelle Florian SACCHETTI, j'ai 26 ans et je suis né à Lyon en France</h2>
+          <h2>Je vis actuellement en Corée du Sud et je recherche un emploi dans le secteur de l'énergie et/ou l'environement</h2>
+        
       </div>
 
-      <h1 id="link-2">Academic Background</h1>
+      <h1 id="link-2">Education</h1>
       <div class="content-2">
 
 
         <p class="left-side-years-10 lsy">2021-2023</p>
         <div class="case-droite">
-          <h4>Jeonbuk National University - South Korea</h4>
+          <h4>Université Nationale Jeonbuk - Corée du Sud</h4>
           <ul>
-            <li class="school-major">Environment and Energy Department (Master's Degree)</li>
-            <li>Carbon Dioxyde Storage, Reservoir Simulation, Carbon Neutral</li>
-            <li>Bacis of coding (Python, Matlab, HTML/CSS)</li>
+            <li class="school-major">Département Energie et Environement (Master)</li>
+            <li>Stockage de dioxide de carbon, simulation de reservoir, neutralité carbone</li>
+            <li>Base de la programmation (Python, Matlab, HTML/CSS)</li>
             <li></li>
           </ul>
         </div>
         <p class="left-side-years-11 lsy">2019-2021</p>
         <div class="case-droite">
-          <h4>Jeonbuk National University - South Korea</h4>
+          <h4>Université Nationale Jeonbuk - Corée du Sud</h4>
           <ul>
-            <li class="school-major">Exchange Program</li>
-            <li>Korean Language</li>
+            <li class="school-major">Programme d'échange</li>
+            <li>Etude de la langue coréenne</li>
           </ul>
         </div>
         <p class="left-side-years-12 lsy">2017-2021</p>
         <div class="case-droite">
-          <h4>University of Technology of Belfort-Montbeliard - France</h4>
+          <h4>Université de Technologie de Belfort-Montbeliard - France</h4>
           <ul>
-            <li class="school-major">Electrical Engineering (Master's Degree)</li>
-            <li>Power Electronics, Electric Power Quality</li>
-            <li>Renewable Energies</li>
+            <li class="school-major">Energie (Diplome d'ingénieur)</li>
+            <li>Electronique de puissance, qualité de l'énergie</li>
+            <li>Energie renouvelable</li>
           </ul>
         </div>
         <p class="left-side-years-13 lsy">2015-2017</p>
         <div class="case-droite">
-          <h4>University Claude Bernard Lyon 1 - France</h4>
+          <h4>Université Claude Bernard Lyon 1 - France</h4>
           <ul>
-            <li class="school-major">Maintenance Engineering (Undergraduate Degree)</li>
-            <li>Electricity, Electronic, Thermodynamic and Mechanic engineering basics</li>
+            <li class="school-major">Génie Industriel et Maintenance (Diplome Universitaire de Technologie)</li>
+            <li>Etude de l'électricité, électronique, thermodynamique et mécanique </li>
           </ul>
         </div>
       </div>
 
 
-      <h1 id="link-3">Work Experience</h1>
+      <h1 id="link-3">Expérience Professionel</h1>
       <div class="content-3">
         <p class="left-side-years-20 lsy">2018-2019</p>
         <div class="case-droite">
-          <h4>EDF (French Electricity Produer) - Nuclear Power Plant, Bugey, France</h4>
-          <h5>Six-month Internship</h5>
+          <h4>EDF (Electricité de France) - Centrale nucléaire du Bugey, France</h4>
+          <h5>Stage de six mois</h5>
           <ul>
-            <li>Electrical Research and Development Department</li>
-            <li>Propositon of modification on the lubrication shaft system</li>
+            <li>Département électrique</li>
+            <li>Proposition de modification sur le système d'arbre de lubrification</li>
           </ul>
         </div>
         <p class="left-side-years-21 lsy">2017</p>
         <div class="case-droite">
-          <h4>ENEDIS (French Operator of Electricity Distribution Grid) - Design Office, Lyon, France</h4>
-          <h5>Three-month Intership</h5>
+          <h4>ENEDIS - Bureau d'office, Lyon, France</h4>
+          <h5>Stage de trois mois</h5>
           <ul>
-            <li>Analysis of damage on electrical substation with different flood scenario</li>
+            <li>Analyse des dommages causés par les différents scénarios d'inondation sur les postes électriques
+            </li>
           </ul>
         </div>
         <p class="left-side-years-22 lsy">2017, 2018</p>
         <div class="case-droite">
-          <h4>Suez Environment - Waste Management Office, Lyon, France</h4>
+          <h4>Suez Environment - Bureau de gestion des déchets, Lyon, France</h4>
           <h5>Part-time Job</h5>
           <ul>
-            <li>Administrative work</li>
+            <li>Travail administratif</li>
           </ul>
         </div>
       </div>
 
 
       <br><br>
-      <h1 id="projects-title">Projects</h1>
+      <h1 id="projects-title">Projets</h1>
       <div class="project">
-        <h3 id="link-3">Simulation study of CO2 geological storage in reservoir with hydraulic
-          fractured horizontal well
+        <h3 id="link-3">Simulation de stockage géologique du CO2 en réservoir équipé d'un puit horizontal fracturé
+          hydrauliquement
         </h3>
         <ul>
-          <li>Feasibility study of CO2 sequestration in tight sand reservoir by CO2 injection through horizontal well
-            treated by hydraulic
-            fracturing.</li>
-          <li>Analysis of the CO2 migration in the reservoir to assess surface leakage risks.</li>
-          <li>Influence of the different trapping mechanisms on CO2.</li>
-          <li id="coming-soon">(More information once the thesis is published)</li>
+          <li>Étude de faisabilité de la séquestration du CO2 dans un réservoir de gas compact par injection dans un puit horizontal
+            traité par fracturation hydraulique.</li>
+          <li>Evaluation du risque de fuite par l'analyse du mouvement du CO2 dans le réservoir.</li>
+          <li>Influence des différents mécanismes de piégeage de CO2.</li>
+          <li>(Plus d'informations lorsque la thèse sera officiellement accessible)</li>
         </ul>
       </div>
       <br><br>
@@ -177,7 +173,7 @@
   <footer>
     <div class="footer-gauche">
       <div class="contacts">
-        <h2>Contacts</h2>
+        <h2>Contact</h2>
         <div class="email">
           <p>E-mail:</p>
           <span>florian.sacchetti@gmail.com</span>
@@ -197,10 +193,10 @@
         </div>
       </div>
     </div>
-    
     <div class="footer-droite">
-      <div class="signature"><span>This page has been coded exclusively and fully by <a
-            href="https://i.kym-cdn.com/photos/images/newsfeed/001/499/826/2f0.png" target="_blank">me</a></span></div>
+      <div><button>Feedback</button></div>
+      <div class="signature"><span>Cette page a été codé exclusement et intégralement par <a
+            href="https://i.kym-cdn.com/photos/images/newsfeed/001/499/826/2f0.png" target="_blank">moi</a></span></div>
     </div>
   </footer>
 </body>
