--- a/index.html
+++ b/index.html
@@ -41,8 +41,6 @@
           <a href="#">
             <p id="korean">한국어</p>
           </a>
-
-
         </div>
       </div>
     </div>
@@ -71,30 +69,26 @@
     <div class="main">
       <div class="content-1">
         <h1 id="link-1">Presentation</h1>
-        <div class="nom-et-photo">
-          <p class="nom"><span>SACCHETTI</span> Florian</p>
-          <img src="./KakaoTalk_20230718_115041813.jpg">
+        <div id="photo-filler">
+          <div class="nom-et-photo">
+            <p class="nom"><span>SACCHETTI</span> Florian</p>
+          </div>
         </div>
 
-        <h2><br>Heu.. bonjour.. je m'appelle heu.. Florian, et heu.. voila heu.. si vous me decouvrez ben heu.. merci de
-          me decouvrir</h2>
         <br>
         <h2>My name is Florian SACCHETTI, I am a 26 years-old French people born in Lyon, France.</h2>
         <h2>Currently living in Korea, I am looking for a job in the Energy and Enviroment field</h2>
 
       </div>
-
       <h1 id="link-2">Academic Background</h1>
       <div class="content-2">
-
-
         <p class="left-side-years-10 lsy">2021-2023</p>
         <div class="case-droite">
           <h4>Jeonbuk National University - South Korea</h4>
           <ul>
             <li class="school-major">Environment and Energy Department (Master's Degree)</li>
             <li>Carbon Dioxyde Storage, Reservoir Simulation, Carbon Neutral</li>
-            <li>Bacis of coding (Python, Matlab, HTML/CSS)</li>
+            <li>Basics of coding (Python, Matlab, HTML/CSS)</li>
             <li></li>
           </ul>
         </div>
@@ -197,7 +191,7 @@
         </div>
       </div>
     </div>
-    
+
     <div class="footer-droite">
       <div class="signature"><span>This page has been coded exclusively and fully by <a
             href="https://i.kym-cdn.com/photos/images/newsfeed/001/499/826/2f0.png" target="_blank">me</a></span></div>
