--- a/index_fr.html
+++ b/index_fr.html
@@ -35,7 +35,9 @@
         <div class="b-lang">
 
           <p id="active-page">Français</p>
-          <a href="./index.html"><p>English</p></a>
+          <a href="./index.html">
+            <p>English</p>
+          </a>
           <a href="#">
             <p id="korean">한국어</p>
           </a>
@@ -67,23 +69,21 @@
     <div class="main">
       <div class="content-1">
         <h1 id="link-1">Présentation</h1>
-        <div class="nom-et-photo">
-          <p class="nom"><span>SACCHETTI</span> Florian</p>
-          <img src="./KakaoTalk_20230718_115041813.jpg">
+        <div id="photo-filler">
+          <div class="nom-et-photo">
+            <p class="nom"><span>SACCHETTI</span> Florian</p>
+          </div>
         </div>
 
-        <h2><br>Heu.. bonjour.. je m'appelle heu.. Florian, et heu.. voila heu.. si vous me decouvrez ben heu.. merci de
-          me decouvrir</h2>
-          <br>
-          <h2>Je m'appelle Florian SACCHETTI, j'ai 26 ans et je suis né à Lyon en France</h2>
-          <h2>Je vis actuellement en Corée du Sud et je recherche un emploi dans le secteur de l'énergie et/ou l'environement</h2>
-        
+        <br>
+        <h2>Je m'appelle Florian SACCHETTI, j'ai 26 ans et je suis né à Lyon en France</h2>
+        <h2>Je vis actuellement en Corée du Sud et je recherche un emploi dans le secteur de l'énergie et/ou
+          l'environement</h2>
+
       </div>
 
       <h1 id="link-2">Education</h1>
       <div class="content-2">
-
-
         <p class="left-side-years-10 lsy">2021-2023</p>
         <div class="case-droite">
           <h4>Université Nationale Jeonbuk - Corée du Sud</h4>
@@ -160,7 +160,8 @@
           hydrauliquement
         </h3>
         <ul>
-          <li>Étude de faisabilité de la séquestration du CO2 dans un réservoir de gas compact par injection dans un puit horizontal
+          <li>Étude de faisabilité de la séquestration du CO2 dans un réservoir de gas compact par injection dans un
+            puit horizontal
             traité par fracturation hydraulique.</li>
           <li>Evaluation du risque de fuite par l'analyse du mouvement du CO2 dans le réservoir.</li>
           <li>Influence des différents mécanismes de piégeage de CO2.</li>
