Animation improved, maybe meta tag??

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,32 @@
     -->
     <link rel="icon" href="%PUBLIC_URL%/favicon2.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="My name is Florian SACCHETTI, I am a 26 years-old French people born in Lyon, France
+Currently working in Korea in the climate and environment field"
+    />
+    <meta
+      property="og:description"
+      content="My name is Florian SACCHETTI, I am a 26 years-old French people born in Lyon, France
+Currently working in Korea in the climate and environment field"
+    />
+    <meta
+      name="keywords"
+      content="JavaScript, React, Florian Sacchetti, Florian, Sacchetti"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://floriansacc.github.io/" />
+    <meta
+      property="og:image"
+      content="%PUBLIC_URL%/KakaoTalk_20231206_214115178.jpg"
+    />
+
+    <meta property="og:title" content="Florian Sacchetti - Portfolio" />
+    <title>Florian Sacchetti - Portfolio</title>
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
