--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon2.png" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon2.ico" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <meta charset="utf-8" />
     <meta
@@ -28,7 +28,7 @@ Currently working in Korea in the climate and environment field"
     />
     <meta
       name="keywords"
-      content="JavaScript, React, Florian Sacchetti, Florian, Sacchetti"
+      content="JavaScript, React, Florian Sacchetti, Florian, Sacchetti, 플로리안, 사체티"
     />
 
     <meta property="og:type" content="website" />
@@ -38,8 +38,8 @@ Currently working in Korea in the climate and environment field"
       content="%PUBLIC_URL%/KakaoTalk_20231206_214115178.jpg"
     />
 
-    <meta property="og:title" content="Florian Sacchetti - Portfolio" />
-    <title>Florian Sacchetti - Portfolio</title>
+    <meta property="og:title" content="Florian Sacchetti" />
+    <title>Florian Sacchetti</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
