--- a/v2/index.html
+++ b/v2/index.html
@@ -2,9 +2,37 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="apple-touch-icon" href="/assets/logo192.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/v2/public/assets/favicon2.png"
+    />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+
+    <meta
+      name="description"
+      content="My name is Florian SACCHETTI, I am a 27 years-old Front-end developer based in Seoul"
+    />
+    <meta
+      property="og:description"
+      content="My name is Florian SACCHETTI, I am a 27 years-old Front-end developer based in Seoul"
+    />
+    <meta
+      name="keywords"
+      content="JavaScript, TypeScript, React, Florian Sacchetti, Florian, Sacchetti, 플로리안, 사체티"
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://floriansacc.github.io/" />
+    <meta
+      property="og:image"
+      content="/assets/KakaoTalk_20231206_214115178.jpg"
+    />
+
+    <meta property="og:title" content="Florian Sacchetti" />
+    <title>Florian Sacchetti</title>
   </head>
   <body>
     <div id="root"></div>
