--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="apple-touch-icon" href="/assets/logo192.png" />
-    <link
-      rel="icon"
-      type="image/svg+xml"
-      href="/v2/public/assets/favicon2.png"
-    />
+    <link rel="icon" type="image/svg+xml" href="/assets/favicon2.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
@@ -26,10 +22,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://floriansacc.github.io/" />
-    <meta
-      property="og:image"
-      content="/assets/KakaoTalk_20231206_214115178.jpg"
-    />
+    <meta property="og:image" content="/assets/kakao_meta.jpg" />
 
     <meta property="og:title" content="Florian Sacchetti" />
     <title>Florian Sacchetti</title>
