🚚 assets moving and robot txt update

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://floriansacc.github.io/" />
-    <meta property="og:image" content="/assets/kakao_meta.jpg" />
+    <meta property="og:image" content="/assets/allowed/images/kakao_meta.jpg" />
 
     <meta property="og:title" content="Florian Sacchetti" />
     <title>Florian Sacchetti</title>
