--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="icon" type="image/svg+xml" href="/assets/favicon2.png" />
     <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#242424" />
 
     <meta
       name="description"
@@ -22,7 +23,10 @@
 
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://floriansacc.github.io/" />
-    <meta property="og:image" content="/assets/allowed/images/kakao_meta.jpg" />
+    <meta
+      property="og:image"
+      content="/assets/allowed/images/profile_picture.jpeg"
+    />
 
     <meta property="og:title" content="Florian Sacchetti" />
     <title>Florian Sacchetti</title>
